# Development-Management-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  backend.Dockerfile  backend.prod.Dockerfile  backend.spec  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  frontend.prod.Dockerfile  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation-spec-management/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEWS.md
.planning/phases/02-extraction-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: config.py  database.py  main.py  sidecar.py  storage.py
app/models/: __init__.py  document.py  registry.py
app/prompts/: bugs.py  enrichment.py  extraction.py  gaps.py  test_cases.py
app/routers/: bugs.py  dependencies.py  documents.py  gaps.py  projects.py  rules.py  tasks.py  test_cases.py
app/schemas/: __init__.py  bugs.py  enrichment.py  export.py  extraction.py  gaps.py  registry.py  rules.py  tasks.py  test_cases.py
app/services/: auto_enrich.py  bugs.py  claude_client.py  confluence.py  context_builder.py  enrichment.py  export.py  extraction.py  gaps.py  import_context.py  required_sync.py  rules.py  table_mapping.py  task_manager.py  test_cases.py
deploy/: nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build-desktop.sh  eval_extraction.py
tests/: conftest.py  test_dedup_pipeline.py  test_export.py  test_extraction.py
(+106 files in other folders)
