[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0",
    "anthropic>=0.84",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "fastapi>=0.115",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-multipart",
    "truststore>=0.9",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
include = ["app*"]
